--- a/styles.css
+++ b/styles.css
@@ -112,6 +112,14 @@ body {
   cursor: pointer;
   margin-left: 5px;
 }
+.sort--dropdown{
+  padding: 5px;
+  border-radius: 5px;
+  border: none;
+  font-size: 16px;
+  width: 150px;
+}
+
 
 .icons i {
   font-size: 20px;
